[tool.poetry]
name = "packageuser18"
version = "0.1.0"
description = ""
authors = ["yujin0413 <lyj980413@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
